# md-to-tui

./: Cargo.toml  LICENSE  README.md  log.txt
src/: error.rs  lib.rs
src/parser/: lexer.rs  mod.rs  parser.rs  parser_helpers.rs
src/style/: mod.rs  style.rs
src/test/: test.md  test.rs
